# knowledge_rag

./: .dockerignore  Dockerfile  README.md  agno.db  docker-compose.yml  main.py  pyproject.toml
agent-ui/: package-lock.json
data/: agno.db
data/chromadb/: chroma.sqlite3
docs/: model.md
docs/characters/: silent_lord_of_the_waning_echo.md  ten_judges_of_hell.md  the_eclipsed_paragons.md  the_silent_lords.md
docs/core/: ancient_desolate.md  ancient_desolate_v2_太荒古界.md  cosmic_timeline.md  cosmic_titles_of_power.md  main_races.md  severance_crowned.md  the_ethereal_conflux.md  thronefallen.md  void_fragments.md  void_heart.md  void_medians.md
docs/cultivation/paths/: path_of_the_eternal_sovereign.md
docs/cultivation/techniques/: forged_tribulation_weapons.md
docs/locations/: eight_desolates.md  halls_of_judgment.md  immortal_abyss_overview.md  netherworld.md
src/: agent.py
src/api/: telegram.py  whatsapp.py
src/core/: agent.py  agno_assist.py
src/tools/: docling.py
